tests/baselines/reference/defaultExportsCannotMerge01.errors.txt
tests/cases/conformance/es6/modules/m1.ts(2,25): error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
tests/cases/conformance/es6/modules/m1.ts(11,18): error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
tests/cases/conformance/es6/modules/m2.ts(5,8): error TS2304: Cannot find name 'Entity'.
tests/cases/conformance/es6/modules/m2.ts(6,8): error TS2503: Cannot find namespace 'Entity'.
tests/cases/conformance/es6/modules/m2.ts(8,8): error TS2339: Property 'x' does not exist on type '() => number'.
tests/cases/conformance/es6/modules/m2.ts(9,8): error TS2339: Property 'y' does not exist on type '() => number'.


==== tests/cases/conformance/es6/modules/m1.ts (2 errors) ====
    
    export default function Decl() {
                            ~~~~
!!! error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
        return 0;
    }
    
    export interface Decl {
        p1: number;
        p2: number;
    }
    
    export namespace Decl {
                     ~~~~
!!! error TS2652: Merged declaration 'Decl' cannot include a default export declaration. Consider adding a separate 'export default Decl' declaration instead.
        export var x = 10;
        export var y = 20;
    
        interface I {
        }
    }
    
==== tests/cases/conformance/es6/modules/m2.ts (4 errors) ====
    import Entity from "m1"
    
    Entity();
    
    var x: Entity;
           ~~~~~~
!!! error TS2304: Cannot find name 'Entity'.
    var y: Entity.I;
           ~~~~~~
!!! error TS2503: Cannot find namespace 'Entity'.
    
    Entity.x;
           ~
!!! error TS2339: Property 'x' does not exist on type '() => number'.
    Entity.y;
           ~
!!! error TS2339: Property 'y' does not exist on type '() => number'.